# perflib

./: .editorconfig  CMakeLists.txt  LICENSE
include/perflib/: perflib.h
src/: cxx-helpers.hpp  perf-counters.c  perf-counters.h
tests/: perflib-test.cpp
